packages/svelte/tests/compiler-errors/samples/store-prevent-user-declarations/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'dollar_prefix_invalid',
		message: 'The $ prefix is reserved, and cannot be used for variables and imports'
	}
});
